# src/routes/users.route.ts
@@ -1,24 +1,31 @@
-import { Router, Request, Response, NextFunction } from "express";
+import { Router, Request, Response, NextFunction, query } from "express";
 import { validateMongooseId } from "../middlewares/mongoose";
 import express from "express";
 import { UseSchema } from "../schema/useschema";
 import { usevalidation } from "../middlewares/usevalidation"; // Corrected spelling
 import { ZodSchema } from "zod";
 import { UsersController } from "../controllers/users.controller";
-import { userService } from "../Service/userService";
 import { StatusCode } from "../utils/statuscode";
 import { BaseCustomError } from "../utils/baseCustome";
+import { Query } from "tsoa";
+import { Options } from "./@types/userRout";
 
 const Route: Router = express.Router(); // Set type of Route as Router
+const userController = new UsersController();
+
 const schema: ZodSchema = UseSchema; // Set type of schema as object
-const usersControllers = new UsersController();
 
 // get all users
 Route.get("/", async (req: Request, res: Response, _next: NextFunction) => {
   try {
     const controller = new UsersController();
-    const response = await controller.getUsers();
-
+    const { page = 1, limit = 3 } = req.query;
+    const options: Options = {
+      page: parseInt(page as string, 10),
+      limit: parseInt(limit as string, 10),
+      skip: 0
+    };
+    const response = await userController.getUsers(options)
     if (!response) {
       throw new Error("No user found!");
     }
@@ -40,7 +47,7 @@ Route.get(
     try {
       const controller = new UsersController();
       const { id } = req.params;
-      const response = await controller.GetUserById(id);
+      const response = await controller.getUserById(id);
 
       if (!response) {
         throw new Error("User not found");
@@ -62,10 +69,10 @@ Route.post(
   async (req: Request, res: Response, _next: NextFunction) => {
     try {
       const userController = new UsersController();
-      const newUser = await userController.createStudent(req.body);
+      const newUser = await userController.createUser(req.body);
       res.status(StatusCode.Created).json({
         message: "POST success",
-        user: newUser
+        user: newUser,
       });
     } catch (error) {
       _next(error);
